# FrLang

./: .gitignore  AGENTS.md  NOTE.md  README.md  main.py  pyproject.toml
data/: curriculum.json  devoirs.json  eleves.example.json
frlang/: __init__.py  classes.py  cli.py  errors.py  functions.py  imports.py  interpreter.py  lexer.py  memory.py  messages.py  objects.py  parser.py  pointers.py  repl.py  types.py  variables.py
probleme/: arbre_graphe  chemins_graphe  doublon  fibonacci  fichier_personne  fizzbuzz  inverse_mot  litteraux  max_sous_tableau  n_premiers_primes  n_premiers_primes.fr  palindrome  parentheses  passage  personne  pointeurs_liste  recherche_binaire  two_sum
sac/: __init__.py  errors.py  functions.py  interpreter.py  lexer.py  messages.py  objects.py  parser.py  pointers.py  types.py  variables.py
scripts/: agent-check.sh  seed-mocks.sh  watch-lsp.py  web-build.sh  web-dev.sh
tests/: test_arbre_graphe.py  test_classes.py  test_cli.py  test_comments.py  test_control_flow.py  test_defaults.py  test_fibonacci.py  test_fichier.py  test_functions.py  test_hover.py  test_import.py  test_input.py  test_inverse_mot.py  test_leetcode.py  test_lexer.py  test_literals.py  test_loop_control.py  test_lsp.py  test_math_module.py  test_number_literals.py  test_objects.py  test_palindrome.py  test_passage.py  test_personne.py  test_pointers.py  test_pointeurs_liste.py  test_pourchaque.py  test_primitive_list.py  test_type_builtin.py  test_web.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
(+57 files in other folders)
