[project]
name = "frlang"
version = "0.1.0"
description = "FrLang — langage de programmation en français pour le tutorat"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
frlang = "frlang.cli:frlang_main"
ifrlang = "frlang.cli:ifrlang_main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["frlang*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
