[project]
name = "frlang"
version = "0.1.0"
description = "FrLang — langage de programmation en français pour le tutorat"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
lsp = ["pygls>=1.3", "lsprotocol", "websockets>=12.0"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "httpx>=0.27"]

[project.scripts]
frlang = "frlang.cli:frlang_main"
ifrlang = "frlang.cli:ifrlang_main"
frlang-lsp = "frlang.lsp.server:main"
frlang-lsp-ws = "frlang.lsp.ws_server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["frlang*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
